[CHANGE] Change all occurrences from Stream.collect(Collectors.toList()) to Steam.toList()
Change all the occurrences due to SonarLint warnings. SonarLint Warning Code java:S6204